# arm05_sim

./: CMakeLists.txt  README.md  package.xml
launch/: world.launch.py
map/: map.pgm  map.yaml
models/arm_house/: model.config  model.sdf
models/aruco_markers/0/: model.config  model.sdf
models/aruco_markers/0/materials/scripts/: 0.material
models/aruco_markers/1/: model.config  model.sdf
models/aruco_markers/1/materials/scripts/: 1.material
models/aruco_markers/2/: model.config  model.sdf
models/aruco_markers/2/materials/scripts/: 2.material
models/aruco_markers/3/: model.config  model.sdf
models/aruco_markers/3/materials/scripts/: 3.material
models/aruco_markers/4/: model.config  model.sdf
models/aruco_markers/4/materials/scripts/: 4.material
param/: waffle.yaml
scripts_arm05/: spawn_aruco.py
worlds/: arm_house.world
